--- a/config/mainCfg_TauTau_Legacy2018.cfg
+++ b/config/mainCfg_TauTau_Legacy2018.cfg
@@ -5,33 +5,38 @@ lumi = 59970 # pb^-1 CMS2018LUMI PASSING ANALYSIS QUALITY REQUIREMENT
 # approximate to only one decimal digit
 lumi_fb = 60.0 # fb^-1
 
-outputFolder = /gwpool/users/dzuolo/HHbbtautatuAnalysisLegacy/CMSSW_11_1_0_pre6/src/KLUBAnalysis/analysis_TauTau_Legacy2018_16July2020_shapeSync
+outputFolder = /data_CMS/cms/liugeliang/HHbbtautau_histos/Legacy2018_TauTau_11Oct2021
 
 data = DTauA, DTauB, DTauC, DTauD
 
-signals = GGHHSM
+signals = Radion250,    Radion260,      Radion270,      Radion280,      Radion300,      Radion320,      Radion350,      Radion400,      Radion450,      Radion500,      Radion550,      Radion600,      Radion650,      Radion700,      Radion750,      Radion800,      Radion850,      Radion900,      Radion1000,     Radion1250,     Radion1500,     Radion1750,     Radion2000,     Radion2500,     Radion3000
 
-backgrounds = TTfullyHad, TTfullyLep, TTsemiLep, DY, DY_LM, WJets_HT_0_100, WJets_HT_100_200, WJets_HT_200_400, WJets_HT_400_600, WJets_HT_600_800, WJets_HT_800_1200, WJets_HT_1200_2500, WJets_HT_2500_Inf, TWtop, TWantitop, singleTop_top, singleTop_antitop, EWKWMinus2Jets_WToLNu, EWKWPlus2Jets_WToLNu, EWKZ2Jets_ZToLL, WWTo2L2Nu, WWTo4Q, WWToLNuQQ, WZTo1L1Nu2Q, WZTo1L3Nu, WZTo2L2Q, WZTo3LNu, ZZTo2L2Nu, ZZTo2L2Q, ZZTo2Q2Nu, ZZTo4L, ZH_HBB_ZLL, ZH_HBB_ZQQ, ZH_HTauTau, ggHTauTau, VBFHTauTau, WplusHTauTau, WminusHTauTau, ttHJetTononBB, ttHJetToBB, ttHJetToTauTau, WWW, WWZ, WZZ, ZZZ, TTWJetsToLNu, TTWJetsToQQ, TTZToLLNuNu, TTZToQQ, TTWW, TTWZ, TTZZ, TTWH, TTZH
+backgrounds = TTfullyHad, TTfullyLep, TTsemiLep, DY_HM, DY_LM, WJets_HT_0_100, WJets_HT_100_200, WJets_HT_200_400, WJets_HT_400_600, WJets_HT_600_800, WJets_HT_800_1200, WJets_HT_1200_2500, WJets_HT_2500_Inf, TWtop, TWantitop, singleTop_top, singleTop_antitop, EWKWMinus2Jets_WToLNu, EWKWPlus2Jets_WToLNu, EWKZ2Jets_ZToLL, WWTo2L2Nu, WWTo4Q, WWToLNuQQ, WZTo1L1Nu2Q, WZTo1L3Nu, WZTo2L2Q, WZTo3LNu, ZZTo2L2Nu, ZZTo2L2Q, ZZTo2Q2Nu, ZZTo4L, ZH_HBB_ZLL, ZH_HBB_ZQQ, ZH_HTauTau, ggHTauTau, VBFHTauTau, WplusHTauTau, WminusHTauTau, ttHJetTononBB, ttHJetToBB, ttHJetToTauTau, WWW, WWZ, WZZ, ZZZ, TTWJetsToLNu, TTWJetsToQQ, TTZToLLNuNu, TTZToQQ, TTWW, TTWZ, TTZZ, TTWH, TTZH, GGHH_NLO_cHHH1_xs, VBFHH_CV_1_C2V_1_C3_1_xs
 
 # TOGETHER WITH THE TARGET VARIABLES YOU NEED ALWAYS PLOT LOWER LEVEL VARIABLES TO CHECK THAT EVERYTHING IS OK
 #variables = dau1_pt, dau2_pt, dau1_eta, dau2_eta, ditau_deltaR, bjet1_pt, bjet1_bID_deepFlavor, bjet2_pt, bjet2_bID_deepFlavor, tauH_mass, tauH_SVFIT_mass, tauH_pt, bH_mass, bH_pt, HH_mass_raw, HH_pt, BDToutSM_kl_1
-variables = tauH_pt
+#variables = dau1_pt, dau2_pt, dau1_eta, dau2_eta, ditau_deltaR, bjet1_pt, bjet1_bID_deepFlavor, bjet2_pt, bjet2_bID_deepFlavor, tauH_mass, tauH_SVFIT_mass, tauH_pt, bH_mass, bH_pt, HH_mass_raw, HH_pt, DNNoutSM_kl_1, HHKin_mass_raw
+#variables = HHKin_mass_raw#, ditau_deltaR
+variables = DNNoutSM_kl_1, HHKin_mass_raw
+variables2D = HHKin_mass_raw:DNNoutSM_kl_1
 
 # SELECTIONS W/O MASS CUT
 #selections = baseline, s1b1jresolved, s2b0jresolved, sboostedLL, s0b2j, VBFloose, VBFtight
 
 # SELECTIONS W/ MASS CUT
-#selections = baselineMcut, s1b1jresolvedMcut, s2b0jresolvedMcut, sboostedLLMcut, s0b2j, VBFlooseMcut, VBFtightMcut
+#selections = s1b1jresolvedMcut, s2b0jresolvedMcut, sboostedLLMcut, VBFloose
+selections = s1b1jresolvedMcutMD, s2b0jresolvedMcutMD, sboostedLLMcutMD, VBFlooseMD, s1b1jresolvedMcutInvMD, s2b0jresolvedMcutInvMD, sboostedLLMcutInvMD, VBFlooseInvMD
 
-selections = baseline
+#selections = s1b1jresolvedMcutmHH250_330, s1b1jresolvedMcutmHH330_510, s1b1jresolvedMcutmHH510_660, s1b1jresolvedMcutmHH660_970, s1b1jresolvedMcutmHH970_3500, s2b0jresolvedMcutmHH250_330, s2b0jresolvedMcutmHH330_420, s2b0jresolvedMcutmHH420_540, s2b0jresolvedMcutmHH540_860, s2b0jresolvedMcutmHH860_3500, sboostedLLMcutmHH250_720, sboostedLLMcutmHH720_900, sboostedLLMcutmHH900_3500, VBFloosemHH250_400, VBFloosemHH400_540, VBFloosemHH540_760, VBFloosemHH760_1000, VBFloosemHH1000_3500
+#selections = s1b1jresolvedMcutmHH250_335, s1b1jresolvedMcutmHH335_475, s1b1jresolvedMcutmHH475_725, s1b1jresolvedMcutmHH725_1100, s1b1jresolvedMcutmHH1100_3500, s1b1jresolvedMcut, s2b0jresolvedMcutmHH250_335, s2b0jresolvedMcutmHH335_475, s2b0jresolvedMcutmHH475_725, s2b0jresolvedMcutmHH725_1100, s2b0jresolvedMcutmHH1100_3500, s2b0jresolvedMcut, sboostedLLMcutmHH250_625, sboostedLLMcutmHH625_775, sboostedLLMcutmHH775_1100, sboostedLLMcutmHH1100_3500, sboostedLLMcut, VBFloosemHH250_335, VBFloosemHH335_475, VBFloosemHH475_725, VBFloosemHH725_1100, VBFloosemHH1100_3500, VBFloose
 
-regions    = SR, SStight, OSrlx, SSrlx, OSinviso, SSinviso
+regions    = SR, SStight, OSinviso, SSinviso
 
 
 [configs]
 
-sampleCfg = config/sampleCfg_Legacy2018.cfg
-cutCfg    = config/selectionCfg_TauTau_Legacy2018.cfg
+sampleCfg = /home/llr/cms/liugeliang/HH_bbtautau/CMSSW_11_1_0_pre6/src/KLUBAnalysis/config/sampleCfg_Legacy2018_noDRcut.cfg
+cutCfg    = /home/llr/cms/liugeliang/HH_bbtautau/CMSSW_11_1_0_pre6/src/KLUBAnalysis/config/selectionCfg_TauTau_Legacy2018.cfg
 
 
 [merge]
@@ -56,15 +61,22 @@ cutCfg    = config/selectionCfg_TauTau_Legacy2018.cfg
 #doubleTVV      = TTZZ, TTWW, TTWZ, TTWH, TTZH
 
 #For shape sync
-TT	= TTfullyHad, TTfullyLep, TTsemiLep
-W	= WJets_HT_0_100, WJets_HT_100_200, WJets_HT_200_400, WJets_HT_400_600, WJets_HT_600_800, WJets_HT_800_1200, WJets_HT_1200_2500, WJets_HT_2500_Inf
-EWK	= EWKWMinus2Jets_WToLNu, EWKWPlus2Jets_WToLNu, EWKZ2Jets_ZToLL
-singleT = TWtop, TWantitop, singleTop_top, singleTop_antitop
-H	= ZH_HBB_ZLL, ZH_HBB_ZQQ, ZH_HTauTau, ggHTauTau, VBFHTauTau, WplusHTauTau, WminusHTauTau, ttHJetTononBB, ttHJetToBB, ttHJetToTauTau
-TTV	= TTWJetsToLNu, TTWJetsToQQ, TTZToLLNuNu, TTZToQQ
-TTVV	= TTZZ, TTWW, TTWZ, TTWH, TTZH
-VV	= ZZTo4L, ZZTo2L2Nu, ZZTo2L2Q, ZZTo2Q2Nu, WZTo3LNu, WZTo1L1Nu2Q, WZTo1L3Nu, WZTo2L2Q, WWTo2L2Nu, WWToLNuQQ, WWTo4Q
-VVV	= WWW, WWZ, WZZ, ZZZ
+TT      = TTfullyHad, TTfullyLep, TTsemiLep
+DY      = DY_HM, DY_LM
+#WJets   = WJets_HT_0_100, WJets_HT_100_200, WJets_HT_200_400, WJets_HT_400_600, WJets_HT_600_800, WJets_HT_800_1200, WJets_HT_1200_2500, WJets_HT_2500_Inf
+#singleT = TWtop, TWantitop, singleTop_top, singleTop_antitop
+
+#EWK    = EWKWMinus2Jets_WToLNu, EWKWPlus2Jets_WToLNu, EWKZ2Jets_ZToLL
+#H      = ZH_HBB_ZLL, ZH_HBB_ZQQ, ZH_HTauTau, ggHTauTau, VBFHTauTau, WplusHTauTau, WminusHTauTau, ttHJetTononBB, ttHJetToBB, ttHJetToTauTau
+#TTV    = TTWJetsToLNu, TTWJetsToQQ, TTZToLLNuNu, TTZToQQ
+#TTVV   = TTZZ, TTWW, TTWZ, TTWH, TTZH
+#VV     = ZZTo4L, ZZTo2L2Nu, ZZTo2L2Q, ZZTo2Q2Nu, WZTo3LNu, WZTo1L1Nu2Q, WZTo1L3Nu, WZTo2L2Q, WWTo2L2Nu, WWToLNuQQ, WWTo4Q
+#VVV    = WWW, WWZ, WZZ, ZZZ
+#HH	= GGHH_NLO_cHHH1_xs, VBFHH_CV_1_C2V_1_C3_1_xs
+
+#Others  = EWKWMinus2Jets_WToLNu, EWKWPlus2Jets_WToLNu, EWKZ2Jets_ZToLL, ZH_HBB_ZLL, ZH_HBB_ZQQ, ZH_HTauTau, ggHTauTau, VBFHTauTau, WplusHTauTau, WminusHTauTau, ttHJetTononBB, ttHJetToBB, ttHJetToTauTau, TTWJetsToLNu, TTWJetsToQQ, TTZToLLNuNu, TTZToQQ, TTZZ, TTWW, TTWZ, TTWH, TTZH, ZZTo4L, ZZTo2L2Nu, ZZTo2L2Q, ZZTo2Q2Nu, WZTo3LNu, WZTo1L1Nu2Q, WZTo1L3Nu, WZTo2L2Q, WWTo2L2Nu, WWToLNuQQ, WWTo4Q, WWW, WWZ, WZZ, ZZZ, GGHH_NLO_cHHH1_xs, VBFHH_CV_1_C2V_1_C3_1_xs
+
+Others	= WJets_HT_0_100, WJets_HT_100_200, WJets_HT_200_400, WJets_HT_400_600, WJets_HT_600_800, WJets_HT_800_1200, WJets_HT_1200_2500, WJets_HT_2500_Inf, TWtop, TWantitop, singleTop_top, singleTop_antitop, EWKWMinus2Jets_WToLNu, EWKWPlus2Jets_WToLNu, EWKZ2Jets_ZToLL, ZH_HBB_ZLL, ZH_HBB_ZQQ, ZH_HTauTau, ggHTauTau, VBFHTauTau, WplusHTauTau, WminusHTauTau, ttHJetTononBB, ttHJetToBB, ttHJetToTauTau, TTWJetsToLNu, TTWJetsToQQ, TTZToLLNuNu, TTZToQQ, TTZZ, TTWW, TTWZ, TTWH, TTZH, ZZTo4L, ZZTo2L2Nu, ZZTo2L2Q, ZZTo2Q2Nu, WZTo3LNu, WZTo1L1Nu2Q, WZTo1L3Nu, WZTo2L2Q, WWTo2L2Nu, WWToLNuQQ, WWTo4Q, WWW, WWZ, WZZ, ZZZ, GGHH_NLO_cHHH1_xs, VBFHH_CV_1_C2V_1_C3_1_xs
 
 data_obs  = DTauA, DTauB, DTauC, DTauD
 
