--- a/config/selectionCfg_ETau_Legacy2018_binning.cfg
+++ b/config/selectionCfg_ETau_Legacy2018_binning.cfg
@@ -42,6 +42,16 @@ SSinviso     = isOS == 0 && dau1_eleMVAiso == 1 && dau2_deepTauVsJet >= 1 && dau
 
 DR	= ditau_deltaR > 0.5
 InvDR	= ditau_deltaR <= 0.5
+mHH1	= HHKin_mass_raw >= 250 && HHKin_mass_raw < 335
+mHH2	= HHKin_mass_raw >= 335 && HHKin_mass_raw < 475
+mHH3    = HHKin_mass_raw >= 475 && HHKin_mass_raw < 725
+mHH4    = HHKin_mass_raw >= 725 && HHKin_mass_raw < 1100
+mHH5    = HHKin_mass_raw >= 1100
+
+mHH1b	= HHKin_mass_raw >=250 && HHKin_mass_raw < 625
+mHH2b	= HHKin_mass_raw >=625 && HHKin_mass_raw < 775
+mHH3b	= HHKin_mass_raw >=775 && HHKin_mass_raw < 1100
+mHH4b	= HHKin_mass_raw >= 1100
 
 # final categories without masscut
 s2b0jresolved = baseline , btagMM, isBoosted != 1, !(isVBF == 1 && VBFjj_mass > 500 && VBFjj_deltaEta > 3 && (bjet1_bID_deepFlavor > 0.2770 || bjet2_bID_deepFlavor > 0.2770) )
@@ -55,39 +65,41 @@ sboostedLLMcut    = baseline , btagLL, isBoosted == 1 , boostMassCut2 , !(isVBF 
 VBFloose     = baselineVBFloose, btagMfirst
 VBFlooseMcut = VBFloose, ellypsMassCut
 
-mHHDNN_1b1j	= -0.427528*TMath::Exp(-(HHKin_mass_raw-366.371)*(HHKin_mass_raw-366.371)/2./155.013/155.013)-0.00000010004*(HHKin_mass_raw-2194.07)*(HHKin_mass_raw-2194.07)+0.983285 <= DNNoutSM_kl_1
-mHHDNN_2b0j	= -0.695173*TMath::Exp(-(HHKin_mass_raw-349.36)*(HHKin_mass_raw-349.36)/2./143.697/143.697)+0.0000238203*HHKin_mass_raw+0.93285 <= DNNoutSM_kl_1
-mHHDNN_boost	= -0.299762*TMath::DiLog(HHKin_mass_raw*0.00709139-0.946621)+1.09275-0.000187977*HHKin_mass_raw <= DNNoutSM_kl_1
-mHHDNN_VBF	= -0.327509*TMath::Exp(-(HHKin_mass_raw-1206.05)*(HHKin_mass_raw-1206.05)/2./309.461/309.461)-1.15969*TMath::Exp(-0.001733*HHKin_mass_raw)+0.846774 <= DNNoutSM_kl_1
+s1b1jresolvedMcutDR		= s1b1jresolvedMcut, DR
+s1b1jresolvedMcutmHH250_335	= s1b1jresolvedMcut, DR, mHH1
+s1b1jresolvedMcutmHH335_475	= s1b1jresolvedMcut, DR, mHH2
+s1b1jresolvedMcutmHH475_725	= s1b1jresolvedMcut, DR, mHH3
+s1b1jresolvedMcutmHH725_1100	= s1b1jresolvedMcut, DR, mHH4
+s1b1jresolvedMcutmHH1100_3500	= s1b1jresolvedMcut, DR, mHH5
+s1b1jresolvedMcutInvDR		= s1b1jresolvedMcut, InvDR
 
-InvmHHDNN_1b1j     = -0.427528*TMath::Exp(-(HHKin_mass_raw-366.371)*(HHKin_mass_raw-366.371)/2./155.013/155.013)-0.00000010004*(HHKin_mass_raw-2194.07)*(HHKin_mass_raw-2194.07)+0.983285 > DNNoutSM_kl_1
-InvmHHDNN_2b0j     = -0.695173*TMath::Exp(-(HHKin_mass_raw-349.36)*(HHKin_mass_raw-349.36)/2./143.697/143.697)+0.0000238203*HHKin_mass_raw+0.93285 > DNNoutSM_kl_1
-InvmHHDNN_boost    = -0.299762*TMath::DiLog(HHKin_mass_raw*0.00709139-0.946621)+1.09275-0.000187977*HHKin_mass_raw > DNNoutSM_kl_1
-InvmHHDNN_VBF      = -0.327509*TMath::Exp(-(HHKin_mass_raw-1206.05)*(HHKin_mass_raw-1206.05)/2./309.461/309.461)-1.15969*TMath::Exp(-0.001733*HHKin_mass_raw)+0.846774 > DNNoutSM_kl_1
+s2b0jresolvedMcutDR		= s2b0jresolvedMcut, DR
+s2b0jresolvedMcutmHH250_335	= s2b0jresolvedMcut, DR, mHH1
+s2b0jresolvedMcutmHH335_475 	= s2b0jresolvedMcut, DR, mHH2
+s2b0jresolvedMcutmHH475_725 	= s2b0jresolvedMcut, DR, mHH3
+s2b0jresolvedMcutmHH725_1100 	= s2b0jresolvedMcut, DR, mHH4
+s2b0jresolvedMcutmHH1100_3500 	= s2b0jresolvedMcut, DR, mHH5
+s2b0jresolvedMcutInvDR 		= s2b0jresolvedMcut, InvDR
+
+sboostedLLMcutDR		= sboostedLLMcut, DR
+sboostedLLMcutmHH250_625	= sboostedLLMcut, DR, mHH1b
+sboostedLLMcutmHH625_775	= sboostedLLMcut, DR, mHH2b
+sboostedLLMcutmHH775_1100	= sboostedLLMcut, DR, mHH3b
+sboostedLLMcutmHH1100_3500	= sboostedLLMcut, DR, mHH4b
+sboostedLLMcutInvDR		= sboostedLLMcut, InvDR
+
+VBFlooseDR			= VBFloose, DR
+VBFloosemHH250_335		= VBFloose, DR, mHH1
+VBFloosemHH335_475		= VBFloose, DR, mHH2
+VBFloosemHH475_725		= VBFloose, DR, mHH3
+VBFloosemHH725_1100		= VBFloose, DR, mHH4
+VBFloosemHH1100_3500		= VBFloose, DR, mHH5
+VBFlooseInvDR			= VBFloose, InvDR
 
 
-s1b1jresolvedMcutDRMD	= s1b1jresolvedMcut, DR, mHHDNN_1b1j
-s1b1jresolvedMcutInvDRMD= s1b1jresolvedMcut, InvDR, mHHDNN_1b1j
-s2b0jresolvedMcutDRMD	= s2b0jresolvedMcut, DR, mHHDNN_2b0j
-s2b0jresolvedMcutInvDRMD= s2b0jresolvedMcut, InvDR, mHHDNN_2b0j
-sboostedLLMcutDRMD	= sboostedLLMcut, DR, mHHDNN_boost
-sboostedLLMcutInvDRMD	= sboostedLLMcut, InvDR, mHHDNN_boost
-VBFlooseDRMD		= VBFloose, DR, mHHDNN_VBF
-VBFlooseInvDRMD		= VBFloose, InvDR, mHHDNN_VBF
 
-s1b1jresolvedMcutDRInvMD     = s1b1jresolvedMcut, DR, InvmHHDNN_1b1j
-s1b1jresolvedMcutInvDRInvMD  = s1b1jresolvedMcut, InvDR, InvmHHDNN_1b1j
-s2b0jresolvedMcutDRInvMD     = s2b0jresolvedMcut, DR, InvmHHDNN_2b0j
-s2b0jresolvedMcutInvDRInvMD  = s2b0jresolvedMcut, InvDR, InvmHHDNN_2b0j
-sboostedLLMcutDRInvMD        = sboostedLLMcut, DR, InvmHHDNN_boost
-sboostedLLMcutInvDRInvMD     = sboostedLLMcut, InvDR, InvmHHDNN_boost
-VBFlooseDRInvMD              = VBFloose, DR, InvmHHDNN_VBF
-VBFlooseInvDRInvMD           = VBFloose, InvDR, InvmHHDNN_VBF
-
-
-
-#InvDR		  = ditau_deltaR <= 0.5 && ( s1b1jresolvedold || s2b0jresolvedold || sboostedLLMcutold || VBFlooseold )
-#InvDR		  = ditau_deltaR <= 0.5 && ( (baseline , btagM , isBoosted != 1 , ellypsMassCut2, !(isVBF == 1 && VBFjj_mass > 500 && VBFjj_deltaEta > 3 && (bjet1_bID_deepFlavor > 0.2770 || bjet2_bID_deepFlavor > 0.2770) )) || (baseline , btagMM, isBoosted != 1 , ellypsMassCut2, !(isVBF == 1 && VBFjj_mass > 500 && VBFjj_deltaEta > 3 && (bjet1_bID_deepFlavor > 0.2770 || bjet2_bID_deepFlavor > 0.2770) )) || (baseline , btagLL, isBoosted == 1 , boostMassCut2 , !(isVBF == 1 && VBFjj_mass > 500 && VBFjj_deltaEta > 3 && (bjet1_bID_deepFlavor > 0.2770 || bjet2_bID_deepFlavor > 0.2770) )) || (baselineVBFloose, btagMfirst) )
+#invDR		  = ditau_deltaR <= 0.5 && ( s1b1jresolvedold || s2b0jresolvedold || sboostedLLMcutold || VBFlooseold )
+#invDR		  = ditau_deltaR <= 0.5 && ( (baseline , btagM , isBoosted != 1 , ellypsMassCut2, !(isVBF == 1 && VBFjj_mass > 500 && VBFjj_deltaEta > 3 && (bjet1_bID_deepFlavor > 0.2770 || bjet2_bID_deepFlavor > 0.2770) )) || (baseline , btagMM, isBoosted != 1 , ellypsMassCut2, !(isVBF == 1 && VBFjj_mass > 500 && VBFjj_deltaEta > 3 && (bjet1_bID_deepFlavor > 0.2770 || bjet2_bID_deepFlavor > 0.2770) )) || (baseline , btagLL, isBoosted == 1 , boostMassCut2 , !(isVBF == 1 && VBFjj_mass > 500 && VBFjj_deltaEta > 3 && (bjet1_bID_deepFlavor > 0.2770 || bjet2_bID_deepFlavor > 0.2770) )) || (baselineVBFloose, btagMfirst) )
 
 
 # VBF "multi-categories"
@@ -203,14 +215,14 @@ tauH_mass               = 30, 0, 300
 tauH_pt                 = 30, 0, 300
 tauH_SVFIT_mass         = 30, 0, 300
 tauH_SVFIT_pt           = 30, 0, 300
-ditau_deltaR            = 25, 0, 5
+ditau_deltaR            = 50, 0, 5
 ditau_deltaPhi          = 15, 0., 3.14159
 ditau_deltaEta          = 20, 0, 10
 
 HH_mass_raw             = 70, 0, 3500
 HH_mass                 = 70, 0, 3500
 HH_pt                   = 30, 0, 300
-HHKin_mass_raw          = 3250, 250, 3500
+HHKin_mass_raw          = 50, 250, 3500
 HHKin_mass              = 70, 0, 3500
 HH_deltaPhi             = 15, 0., 3.14159
 HHsvfit_pt              = 30, 0, 300
@@ -231,7 +243,7 @@ VBFjet2_btag_deepFlavor = 20, 0, 1
 
 fatjet_softdropMass     = 50, 0, 300
 
-DNNoutSM_kl_1              = 20,0,1
+DNNoutSM_kl_1              = 10000,0,1
 DNNoutSM_kl_1_tauup_DM0    = 20,0,1 
 DNNoutSM_kl_1_taudown_DM0  = 20,0,1 
 DNNoutSM_kl_1_tauup_DM1    = 20,0,1
@@ -281,21 +293,27 @@ DNNoutSM_kl_1_jetdown11    = 20,0,1
 # Dummy binning needed to have make the binning for different categories work properly.
 # These binnings will actually be overwritten by:  category:variable = 0.0, ....
 
+#HHKin_mass_raw = 250, 260, 270, 280, 290, 300, 310, 320, 330, 340, 350, 360, 370, 380, 390, 400, 410, 420, 430, 440, 450, 460, 470, 480, 490, 500, 510, 520, 530, 540, 550, 560, 570, 580, 590, 600, 610, 620, 630, 640, 650, 660, 670, 680, 690, 700, 710, 720, 730, 740, 750, 760, 770, 780, 790, 800, 810, 820, 830, 840, 850, 860, 870, 880, 890, 900, 910, 920, 930, 940, 950, 960, 970, 980, 990, 1000, 1050, 1100, 1150, 1200, 1250, 1300, 1350, 1400, 1450, 1500, 1550, 1600, 1650, 1700, 1750, 1800, 1850, 1900, 1950, 2000, 2050, 2100, 2150, 2200, 2250, 2300, 2350, 2400, 2450, 2500, 2550, 2600, 2650, 2700, 2750, 2800, 2850, 2900, 2950, 3000, 3050, 3100, 3150, 3200, 3250, 3300, 3350, 3400, 3450, 3500
+
+
 #########################################################################
 #########################################################################
 
 [histos2D]
+DNNoutSM_kl_1:HHKin_mass_raw = 10000, 0, 1, 100, 250, 3500
 tauH_SVFIT_mass:bH_mass_raw = 70, 0, 350, 100, 0, 500
 tauH_mass:bH_mass_raw       = 100, 0, 500, 100, 0, 500
 genDecMode1:genDecMode2     = 10, -2,   8, 10, -2, 8
 VBFjj_deltaEta:VBFjj_mass   = 40,  0,  10, 80,  0, 4000
-HHKin_mass_raw:DNNoutSM_kl_1 = 3250, 250, 3500, 100, 0, 1
-DNNoutSM_kl_1:HHKin_mass_raw = 10000, 0, 1, 100, 250, 3500
+
 # user defined binning for a variable - will override the definition in [histos2D]
 # NOTE: if both x and y binnings are defined, there is no need to insert a binning in [histos2D]
 # note: to specify an user binning for a certain axis of a 2D plot, e.g. a binning for B in A:B, use '@' :
 # A:B@B = 0, 15, 20, 30, 50, 1000
 [binning2D]
+DNNoutSM_kl_1:HHKin_mass_raw@HHKin_mass_raw = 250, 265, 275, 290, 310, 335, 375, 425, 475, 525, 575, 625, 675, 725, 775, 825, 875, 950, 1125, 1375, 1625, 1875, 2250, 2750, 3500
+
+#DNNoutSM_kl_1:HHKin_mass_raw@HHKin_mass_raw = 250, 260, 270, 280, 290, 300, 310, 320, 330, 340, 350, 360, 370, 380, 390, 400, 410, 420, 430, 440, 450, 460, 470, 480, 490, 500, 510, 520, 530, 540, 550, 560, 570, 580, 590, 600, 610, 620, 630, 640, 650, 660, 670, 680, 690, 700, 710, 720, 730, 740, 750, 760, 770, 780, 790, 800, 810, 820, 830, 840, 850, 860, 870, 880, 890, 900, 910, 920, 930, 940, 950, 960, 970, 980, 990, 1000, 1050, 1100, 1150, 1200, 1250, 1300, 1350, 1400, 1450, 1500, 1550, 1600, 1650, 1700, 1750, 1800, 1850, 1900, 1950, 2000, 2050, 2100, 2150, 2200, 2250, 2300, 2350, 2400, 2450, 2500, 2550, 2600, 2650, 2700, 2750, 2800, 2850, 2900, 2950, 3000, 3050, 3100, 3150, 3200, 3250, 3300, 3350, 3400, 3450, 3500
 # tauH_SVFIT_mass:bH_mass_raw@bH_mass_raw     = 10, 35, 60, 85, 110, 135, 160, 185, 210, 250, 300, 350, 400, 500
 # tauH_SVFIT_mass:bH_mass_raw@tauH_SVfit_mass = 10, 35, 60, 85, 110, 135, 160, 185, 210, 250, 300, 350, 400, 500
 [selections]
