--- a/config/mainCfg_ETau_Legacy2018_invDRcut.cfg
+++ b/config/mainCfg_ETau_Legacy2018_invDRcut.cfg
@@ -5,40 +5,38 @@ lumi = 59970 # pb^-1 CMS2018LUMI PASSING ANALYSIS QUALITY REQUIREMENT
 # approximate to only one decimal digit
 lumi_fb = 60.0 # fb^-1
 
-outputFolder = /data_CMS/cms/liugeliang/HHbbtautau_histos/Legacy2018_MuTau_11Oct2021
+# make it to my own directory
+outputFolder = /data_CMS/cms/liugeliang/HHbbtautau_histos/Legacy2018_ETau_invDRcut_06Apr2021
+#outputFolder = /gwpool/users/dzuolo/HHbbtautatuAnalysisLegacy/CMSSW_11_1_0_pre6/src/KLUBAnalysis/analysis_ETau_Legacy2018_16July2020_shapeSync
 
-data = DsingleMuA, DsingleMuB, DsingleMuC, DsingleMuD
+data = DsingleEleA, DsingleEleB, DsingleEleC, DsingleEleD
 
-signals = Radion250,    Radion260,      Radion270,      Radion280,      Radion300,      Radion320,      Radion350,      Radion400,      Radion450,      Radion500,      Radion550,      Radion600,      Radion650,      Radion700,      Radion750,      Radion800,      Radion850,      Radion900,      Radion1000,     Radion1250,     Radion1500,     Radion1750,     Radion2000,     Radion2500,     Radion3000
+#radion
+signals = Radion250,	Radion260,	Radion270,	Radion280,	Radion300,	Radion320,	Radion350,	Radion400,	Radion450,	Radion500,	Radion550,	Radion600,	Radion650,	Radion700,	Radion750,	Radion800,	Radion850,	Radion900,	Radion1000,	Radion1250,	Radion1500,	Radion1750,	Radion2000,	Radion2500,	Radion3000
+#signals = GGHHSM
 
 backgrounds = TTfullyHad, TTfullyLep, TTsemiLep, DY_HM, DY_LM, WJets_HT_0_100, WJets_HT_100_200, WJets_HT_200_400, WJets_HT_400_600, WJets_HT_600_800, WJets_HT_800_1200, WJets_HT_1200_2500, WJets_HT_2500_Inf, TWtop, TWantitop, singleTop_top, singleTop_antitop, EWKWMinus2Jets_WToLNu, EWKWPlus2Jets_WToLNu, EWKZ2Jets_ZToLL, WWTo2L2Nu, WWTo4Q, WWToLNuQQ, WZTo1L1Nu2Q, WZTo1L3Nu, WZTo2L2Q, WZTo3LNu, ZZTo2L2Nu, ZZTo2L2Q, ZZTo2Q2Nu, ZZTo4L, ZH_HBB_ZLL, ZH_HBB_ZQQ, ZH_HTauTau, ggHTauTau, VBFHTauTau, WplusHTauTau, WminusHTauTau, ttHJetTononBB, ttHJetToBB, ttHJetToTauTau, WWW, WWZ, WZZ, ZZZ, TTWJetsToLNu, TTWJetsToQQ, TTZToLLNuNu, TTZToQQ, TTWW, TTWZ, TTZZ, TTWH, TTZH, GGHH_NLO_cHHH1_xs, VBFHH_CV_1_C2V_1_C3_1_xs
 
 # TOGETHER WITH THE TARGET VARIABLES YOU NEED ALWAYS PLOT LOWER LEVEL VARIABLES TO CHECK THAT EVERYTHING IS OK
-#variables = dau1_pt, dau2_pt, dau1_eta, dau2_eta, ditau_deltaR, bjet1_pt, bjet1_bID_deepFlavor, bjet2_pt, bjet2_bID_deepFlavor, tauH_mass, tauH_SVFIT_mass, tauH_pt, bH_mass, bH_pt, HH_mass_raw, HH_pt, BDToutSM_kl_1
 #variables = dau1_pt, dau2_pt, dau1_eta, dau2_eta, ditau_deltaR, bjet1_pt, bjet1_bID_deepFlavor, bjet2_pt, bjet2_bID_deepFlavor, tauH_mass, tauH_SVFIT_mass, tauH_pt, bH_mass, bH_pt, HH_mass_raw, HH_pt, DNNoutSM_kl_1, HHKin_mass_raw
-#variables = HHKin_mass_raw#, ditau_deltaR
-variables = DNNoutSM_kl_1, HHKin_mass_raw
-variables2D = HHKin_mass_raw:DNNoutSM_kl_1
+variables = DNNoutSM_kl_1, HHKin_mass_raw, ditau_deltaR
+
 
 # SELECTIONS W/O MASS CUT
 #selections = baseline, s1b1jresolved, s2b0jresolved, sboostedLL, s0b2j, VBFloose
 
 # SELECTIONS W/ MASS CUT
-#selections = s1b1jresolvedMcutDR, s2b0jresolvedMcutDR, sboostedLLMcutDR, VBFlooseDR, s1b1jresolvedMcutInvDR, s2b0jresolvedMcutInvDR, sboostedLLMcutInvDR, VBFlooseInvDR
-selections = s1b1jresolvedMcutDRMD, s2b0jresolvedMcutDRMD, sboostedLLMcutDRMD, VBFlooseDRMD, s1b1jresolvedMcutInvDRMD, s2b0jresolvedMcutInvDRMD, sboostedLLMcutInvDRMD, VBFlooseInvDRMD, s1b1jresolvedMcutDRInvMD, s2b0jresolvedMcutDRInvMD, sboostedLLMcutDRInvMD, VBFlooseDRInvMD, s1b1jresolvedMcutInvDRInvMD, s2b0jresolvedMcutInvDRInvMD, sboostedLLMcutInvDRInvMD, VBFlooseInvDRInvMD
+#selections = baselineMcut, s1b1jresolvedMcut, s2b0jresolvedMcut, sboostedLLMcut, s0b2j, VBFlooseMcut
 
+selections = s1b1jresolvedMcut, s2b0jresolvedMcut, sboostedLLMcut, VBFloose
 
-#selections = s1b1jresolvedMcutmHH250_335, s1b1jresolvedMcutmHH335_475, s1b1jresolvedMcutmHH475_725, s1b1jresolvedMcutmHH725_1100, s1b1jresolvedMcutmHH1100_3500, s1b1jresolvedMcutInvDR, s1b1jresolvedMcut, s2b0jresolvedMcutmHH250_335, s2b0jresolvedMcutmHH335_475, s2b0jresolvedMcutmHH475_725, s2b0jresolvedMcutmHH725_1100, s2b0jresolvedMcutmHH1100_3500, s2b0jresolvedMcutInvDR, s2b0jresolvedMcut, sboostedLLMcutmHH250_625, sboostedLLMcutmHH625_775, sboostedLLMcutmHH775_1100, sboostedLLMcutmHH1100_3500, sboostedLLMcutInvDR, sboostedLLMcut, VBFloosemHH250_335, VBFloosemHH335_475, VBFloosemHH475_725, VBFloosemHH725_1100, VBFloosemHH1100_3500, VBFlooseInvDR, VBFloose
-#selections = s1b1jresolvedMcutmHH250_330, s1b1jresolvedMcutmHH330_520, s1b1jresolvedMcutmHH520_710, s1b1jresolvedMcutmHH710_1000, s1b1jresolvedMcutmHH1000_3500, s1b1jresolvedMcutInvDR, s2b0jresolvedMcutmHH250_330, s2b0jresolvedMcutmHH330_470, s2b0jresolvedMcutmHH470_680, s2b0jresolvedMcutmHH680_1100, s2b0jresolvedMcutmHH1100_3500, s2b0jresolvedMcutInvDR, sboostedLLMcutmHH250_400, sboostedLLMcutmHH400_570, sboostedLLMcutmHH570_810, sboostedLLMcutmHH810_1050, sboostedLLMcutmHH1050_3500, sboostedLLMcutInvDR, VBFloosemHH250_360, VBFloosemHH360_530, VBFloosemHH530_790, VBFloosemHH790_1050, VBFloosemHH1050_3500, VBFlooseInvDR
-#selections = s1b1jresolvedMcut, s2b0jresolvedMcut, sboostedLLMcut, VBFloose
-
-regions    = SR, SStight, OSinviso, SSinviso
+regions    = SR, SStight, OSinviso, SSinviso#, OSrlx, SSrlx
 
 
 [configs]
 
 sampleCfg = /home/llr/cms/liugeliang/HH_bbtautau/CMSSW_11_1_0_pre6/src/KLUBAnalysis/config/sampleCfg_Legacy2018_noDRcut.cfg
-cutCfg    = /home/llr/cms/liugeliang/HH_bbtautau/CMSSW_11_1_0_pre6/src/KLUBAnalysis/config/selectionCfg_MuTau_Legacy2018.cfg
+cutCfg    = /home/llr/cms/liugeliang/HH_bbtautau/CMSSW_11_1_0_pre6/src/KLUBAnalysis/config/selectionCfg_ETau_Legacy2018_invDRcut.cfg
 
 
 [merge]
@@ -74,11 +72,11 @@ DY      = DY_HM, DY_LM
 #TTVV   = TTZZ, TTWW, TTWZ, TTWH, TTZH
 #VV     = ZZTo4L, ZZTo2L2Nu, ZZTo2L2Q, ZZTo2Q2Nu, WZTo3LNu, WZTo1L1Nu2Q, WZTo1L3Nu, WZTo2L2Q, WWTo2L2Nu, WWToLNuQQ, WWTo4Q
 #VVV    = WWW, WWZ, WZZ, ZZZ
-#HH	= GGHH_NLO_cHHH1_xs, VBFHH_CV_1_C2V_1_C3_1_xs
+#HH     = GGHH_NLO_cHHH1_xs, VBFHH_CV_1_C2V_1_C3_1_xs
 #Others  = EWKWMinus2Jets_WToLNu, EWKWPlus2Jets_WToLNu, EWKZ2Jets_ZToLL, ZH_HBB_ZLL, ZH_HBB_ZQQ, ZH_HTauTau, ggHTauTau, VBFHTauTau, WplusHTauTau, WminusHTauTau, ttHJetTononBB, ttHJetToBB, ttHJetToTauTau, TTWJetsToLNu, TTWJetsToQQ, TTZToLLNuNu, TTZToQQ, TTZZ, TTWW, TTWZ, TTWH, TTZH, ZZTo4L, ZZTo2L2Nu, ZZTo2L2Q, ZZTo2Q2Nu, WZTo3LNu, WZTo1L1Nu2Q, WZTo1L3Nu, WZTo2L2Q, WWTo2L2Nu, WWToLNuQQ, WWTo4Q, WWW, WWZ, WZZ, ZZZ, GGHH_NLO_cHHH1_xs, VBFHH_CV_1_C2V_1_C3_1_xs
-Others	= WJets_HT_0_100, WJets_HT_100_200, WJets_HT_200_400, WJets_HT_400_600, WJets_HT_600_800, WJets_HT_800_1200, WJets_HT_1200_2500, WJets_HT_2500_Inf, TWtop, TWantitop, singleTop_top, singleTop_antitop, EWKWMinus2Jets_WToLNu, EWKWPlus2Jets_WToLNu, EWKZ2Jets_ZToLL, ZH_HBB_ZLL, ZH_HBB_ZQQ, ZH_HTauTau, ggHTauTau, VBFHTauTau, WplusHTauTau, WminusHTauTau, ttHJetTononBB, ttHJetToBB, ttHJetToTauTau, TTWJetsToLNu, TTWJetsToQQ, TTZToLLNuNu, TTZToQQ, TTZZ, TTWW, TTWZ, TTWH, TTZH, ZZTo4L, ZZTo2L2Nu, ZZTo2L2Q, ZZTo2Q2Nu, WZTo3LNu, WZTo1L1Nu2Q, WZTo1L3Nu, WZTo2L2Q, WWTo2L2Nu, WWToLNuQQ, WWTo4Q, WWW, WWZ, WZZ, ZZZ, GGHH_NLO_cHHH1_xs, VBFHH_CV_1_C2V_1_C3_1_xs
+Others 	= WJets_HT_0_100, WJets_HT_100_200, WJets_HT_200_400, WJets_HT_400_600, WJets_HT_600_800, WJets_HT_800_1200, WJets_HT_1200_2500, WJets_HT_2500_Inf, TWtop, TWantitop, singleTop_top, singleTop_antitop, EWKWMinus2Jets_WToLNu, EWKWPlus2Jets_WToLNu, EWKZ2Jets_ZToLL, ZH_HBB_ZLL, ZH_HBB_ZQQ, ZH_HTauTau, ggHTauTau, VBFHTauTau, WplusHTauTau, WminusHTauTau, ttHJetTononBB, ttHJetToBB, ttHJetToTauTau, TTWJetsToLNu, TTWJetsToQQ, TTZToLLNuNu, TTZToQQ, TTZZ, TTWW, TTWZ, TTWH, TTZH, ZZTo4L, ZZTo2L2Nu, ZZTo2L2Q, ZZTo2Q2Nu, WZTo3LNu, WZTo1L1Nu2Q, WZTo1L3Nu, WZTo2L2Q, WWTo2L2Nu, WWToLNuQQ, WWTo4Q, WWW, WWZ, WZZ, ZZZ, GGHH_NLO_cHHH1_xs, VBFHH_CV_1_C2V_1_C3_1_xs
 
-data_obs  = DsingleMuA, DsingleMuB, DsingleMuC, DsingleMuD
+data_obs  = DsingleEleA, DsingleEleB, DsingleEleC, DsingleEleD
 
 
 ############################################################################################
