--- a/config/selectionCfg_MuTau_Legacy2018_newbinning.cfg
+++ b/config/selectionCfg_MuTau_Legacy2018_newbinning.cfg
@@ -1,8 +1,8 @@
 [selections]
 
 # pT and eta cuts are already applied at trig match level, so they are not needed here
-# dau1_pt > 25 && abs(dau1_eta) < 2.1 && dau2_pt > 20 && abs(dau2_eta) < 2.3
-baseline         = pairType == 1 && nleps == 0 && nbjetscand > 1
+# dau1_pt > 21 && abs (dau1_eta) < 2.1 && dau2_pt > 20 && abs (dau2_eta) < 2.3
+baseline         = pairType == 0 && nleps == 0 && nbjetscand > 1
 baselineVBF      = baseline, isVBF == 1
 baselineNoVBF    = baseline, isVBF == 0
 baselineMcut     = baseline, tauH_SVFIT_mass > 50
@@ -21,10 +21,15 @@ nobtagMM     = bjet1_bID_deepFlavor < 0.2770 && bjet2_bID_deepFlavor < 0.2770 #b
 massCut      = bH_mass_raw > 80 && bH_mass_raw < 160 && tauH_SVFIT_mass > 80 && tauH_SVFIT_mass < 160
 massCutCent  = tauH_SVFIT_mass > 79.5 && tauH_SVFIT_mass < 152.5 && bH_mass_raw > 74.5 && bH_mass_raw < 147.5
 boostMassCut = tauH_SVFIT_mass > 79.5 && tauH_SVFIT_mass < 152.5 && fatjet_softdropMass > 90 && fatjet_softdropMass < 160
+circMassCut    = TMath::Sqrt((tauH_SVFIT_mass-116.)*(tauH_SVFIT_mass-116.) + (bH_mass_raw-111.)*(bH_mass_raw-111.)) <  40.0
 ellypsMassCut  = ((tauH_SVFIT_mass-116.)*(tauH_SVFIT_mass-116.))/(35.*35.) + ((bH_mass_raw-111.)*(bH_mass_raw-111.))/(45.*45.) <  1.0
-noZMassCut   = bH_mass_raw > 50 && bH_mass_raw < 200 && tauH_SVFIT_mass > 120 && tauH_SVFIT_mass < 160
-circMassCut  = TMath::Sqrt((tauH_SVFIT_mass-116.)*(tauH_SVFIT_mass-116.) + (bH_mass_raw-111.)*(bH_mass_raw-111.)) <  40.0
-
+ringCut = TMath::Sqrt((tauH_SVFIT_mass-116.)*(tauH_SVFIT_mass-116.) + (bH_mass_raw-111.)*(bH_mass_raw-111.)) >  40.0 && TMath::Sqrt((tauH_SVFIT_mass-116.)*(tauH_SVFIT_mass-116.) + (bH_mass_raw-111.)*(bH_mass_raw-111.)) < 60.0
+ringCutLarge = TMath::Sqrt((tauH_SVFIT_mass-116.)*(tauH_SVFIT_mass-116.) + (bH_mass_raw-111.)*(bH_mass_raw-111.)) >  40.0 && TMath::Sqrt((tauH_SVFIT_mass-116.)*(tauH_SVFIT_mass-116.) + (bH_mass_raw-111.)*(bH_mass_raw-111.)) < 80.0
+ringCutVLarge = TMath::Sqrt((tauH_SVFIT_mass-116.)*(tauH_SVFIT_mass-116.) + (bH_mass_raw-111.)*(bH_mass_raw-111.)) >  40.0 && TMath::Sqrt((tauH_SVFIT_mass-116.)*(tauH_SVFIT_mass-116.) + (bH_mass_raw-111.)*(bH_mass_raw-111.)) < 100.0
+massSideband = bH_mass_raw > 156 && bH_mass_raw < 256 && tauH_SVFIT_mass > 151 && tauH_SVFIT_mass <  251
+minHmass     = tauH_mass>60
+METCut       = met_et < 40
+invMETCut    = met_et > 40
 
 # updated mass cuts to be used with DNN 2020-07-31 (both ellyptical)
 # https://github.com/GilesStrong/cms_runII_dnn_models#mass-cuts
@@ -33,15 +38,26 @@ ellypsMassCut2 = ((tauH_SVFIT_mass-129.)*(tauH_SVFIT_mass-129.))/(53.*53.) + ((b
 
 
 # ABCD regions used in the analysis - DeepTau
-SR           = isOS != 0 && dau1_eleMVAiso == 1 && dau2_deepTauVsJet >= 5                          # signal region: opposite sign, isolated taus
-SStight      = isOS == 0 && dau1_eleMVAiso == 1 && dau2_deepTauVsJet >= 5                          # B region
-OSrlx        = isOS != 0 && dau1_eleMVAiso == 1 && dau2_deepTauVsJet >= 1
-SSrlx        = isOS == 0 && dau1_eleMVAiso == 1 && dau2_deepTauVsJet >= 1                          # B' region
-OSinviso     = isOS != 0 && dau1_eleMVAiso == 1 && dau2_deepTauVsJet >= 1 && dau2_deepTauVsJet < 5 # C region
-SSinviso     = isOS == 0 && dau1_eleMVAiso == 1 && dau2_deepTauVsJet >= 1 && dau2_deepTauVsJet < 5 # D region
+SR           = isOS != 0 && dau1_iso < 0.15 && dau2_deepTauVsJet >= 5                            # signal region: opposite sign, isolated taus
+SStight      = isOS == 0 && dau1_iso < 0.15 && dau2_deepTauVsJet >= 5                            # B region
+OSrlx        = isOS != 0 && dau1_iso < 0.15 && dau2_deepTauVsJet >= 1
+SSrlx        = isOS == 0 && dau1_iso < 0.15 && dau2_deepTauVsJet >= 1                            # B' region
+OSinviso     = isOS != 0 && dau1_iso < 0.15 && dau2_deepTauVsJet >= 1 && dau2_deepTauVsJet < 5   # C region
+SSinviso     = isOS == 0 && dau1_iso < 0.15 && dau2_deepTauVsJet >= 1 && dau2_deepTauVsJet < 5   # D region
 
-DR	= ditau_deltaR > 0.5
-InvDR	= ditau_deltaR <= 0.5
+DR      = ditau_deltaR > 0.5
+InvDR   = ditau_deltaR <= 0.5
+mHH1    = HHKin_mass_raw >= 250 && HHKin_mass_raw < 335
+mHH2    = HHKin_mass_raw >= 335 && HHKin_mass_raw < 475
+mHH3    = HHKin_mass_raw >= 475 && HHKin_mass_raw < 725
+mHH4    = HHKin_mass_raw >= 725 && HHKin_mass_raw < 1100
+mHH5    = HHKin_mass_raw >= 1100
+
+mHH1b   = HHKin_mass_raw >=250 && HHKin_mass_raw < 625
+mHH2b   = HHKin_mass_raw >=625 && HHKin_mass_raw < 775
+mHH3b   = HHKin_mass_raw >=775 && HHKin_mass_raw < 1100
+mHH4b   = HHKin_mass_raw >= 1100
+
 
 # final categories without masscut
 s2b0jresolved = baseline , btagMM, isBoosted != 1, !(isVBF == 1 && VBFjj_mass > 500 && VBFjj_deltaEta > 3 && (bjet1_bID_deepFlavor > 0.2770 || bjet2_bID_deepFlavor > 0.2770) )
@@ -51,43 +67,42 @@ s1b1jresolvedMcut = baseline , btagM , isBoosted != 1 , ellypsMassCut2, !(isVBF 
 s2b0jresolvedMcut = baseline , btagMM, isBoosted != 1 , ellypsMassCut2, !(isVBF == 1 && VBFjj_mass > 500 && VBFjj_deltaEta > 3 && (bjet1_bID_deepFlavor > 0.2770 || bjet2_bID_deepFlavor > 0.2770) )
 sboostedLLMcut    = baseline , btagLL, isBoosted == 1 , boostMassCut2 , !(isVBF == 1 && VBFjj_mass > 500 && VBFjj_deltaEta > 3 && (bjet1_bID_deepFlavor > 0.2770 || bjet2_bID_deepFlavor > 0.2770) )
 
+
 # VBF category
 VBFloose     = baselineVBFloose, btagMfirst
 VBFlooseMcut = VBFloose, ellypsMassCut
 
-mHHDNN_1b1j	= -0.427528*TMath::Exp(-(HHKin_mass_raw-366.371)*(HHKin_mass_raw-366.371)/2./155.013/155.013)-0.00000010004*(HHKin_mass_raw-2194.07)*(HHKin_mass_raw-2194.07)+0.983285 <= DNNoutSM_kl_1
-mHHDNN_2b0j	= -0.695173*TMath::Exp(-(HHKin_mass_raw-349.36)*(HHKin_mass_raw-349.36)/2./143.697/143.697)+0.0000238203*HHKin_mass_raw+0.93285 <= DNNoutSM_kl_1
-mHHDNN_boost	= -0.299762*TMath::DiLog(HHKin_mass_raw*0.00709139-0.946621)+1.09275-0.000187977*HHKin_mass_raw <= DNNoutSM_kl_1
-mHHDNN_VBF	= -0.327509*TMath::Exp(-(HHKin_mass_raw-1206.05)*(HHKin_mass_raw-1206.05)/2./309.461/309.461)-1.15969*TMath::Exp(-0.001733*HHKin_mass_raw)+0.846774 <= DNNoutSM_kl_1
-
-InvmHHDNN_1b1j     = -0.427528*TMath::Exp(-(HHKin_mass_raw-366.371)*(HHKin_mass_raw-366.371)/2./155.013/155.013)-0.00000010004*(HHKin_mass_raw-2194.07)*(HHKin_mass_raw-2194.07)+0.983285 > DNNoutSM_kl_1
-InvmHHDNN_2b0j     = -0.695173*TMath::Exp(-(HHKin_mass_raw-349.36)*(HHKin_mass_raw-349.36)/2./143.697/143.697)+0.0000238203*HHKin_mass_raw+0.93285 > DNNoutSM_kl_1
-InvmHHDNN_boost    = -0.299762*TMath::DiLog(HHKin_mass_raw*0.00709139-0.946621)+1.09275-0.000187977*HHKin_mass_raw > DNNoutSM_kl_1
-InvmHHDNN_VBF      = -0.327509*TMath::Exp(-(HHKin_mass_raw-1206.05)*(HHKin_mass_raw-1206.05)/2./309.461/309.461)-1.15969*TMath::Exp(-0.001733*HHKin_mass_raw)+0.846774 > DNNoutSM_kl_1
+s1b1jresolvedMcutmHH250_330 = s1b1jresolvedMcut, DR, (HHKin_mass_raw >= 250 && HHKin_mass_raw < 330)
+s1b1jresolvedMcutmHH330_520 = s1b1jresolvedMcut, DR, (HHKin_mass_raw >= 330 && HHKin_mass_raw < 520)
+s1b1jresolvedMcutmHH520_710 = s1b1jresolvedMcut, DR, (HHKin_mass_raw >= 520 && HHKin_mass_raw < 710)
+s1b1jresolvedMcutmHH710_1000 = s1b1jresolvedMcut, DR, (HHKin_mass_raw >= 710 && HHKin_mass_raw < 1000)
+s1b1jresolvedMcutmHH1000_3500 = s1b1jresolvedMcut, DR, (HHKin_mass_raw >= 1000 && HHKin_mass_raw < 3500)
+s1b1jresolvedMcutInvDR = s1b1jresolvedMcut, InvDR
 
 
-s1b1jresolvedMcutDRMD	= s1b1jresolvedMcut, DR, mHHDNN_1b1j
-s1b1jresolvedMcutInvDRMD= s1b1jresolvedMcut, InvDR, mHHDNN_1b1j
-s2b0jresolvedMcutDRMD	= s2b0jresolvedMcut, DR, mHHDNN_2b0j
-s2b0jresolvedMcutInvDRMD= s2b0jresolvedMcut, InvDR, mHHDNN_2b0j
-sboostedLLMcutDRMD	= sboostedLLMcut, DR, mHHDNN_boost
-sboostedLLMcutInvDRMD	= sboostedLLMcut, InvDR, mHHDNN_boost
-VBFlooseDRMD		= VBFloose, DR, mHHDNN_VBF
-VBFlooseInvDRMD		= VBFloose, InvDR, mHHDNN_VBF
-
-s1b1jresolvedMcutDRInvMD     = s1b1jresolvedMcut, DR, InvmHHDNN_1b1j
-s1b1jresolvedMcutInvDRInvMD  = s1b1jresolvedMcut, InvDR, InvmHHDNN_1b1j
-s2b0jresolvedMcutDRInvMD     = s2b0jresolvedMcut, DR, InvmHHDNN_2b0j
-s2b0jresolvedMcutInvDRInvMD  = s2b0jresolvedMcut, InvDR, InvmHHDNN_2b0j
-sboostedLLMcutDRInvMD        = sboostedLLMcut, DR, InvmHHDNN_boost
-sboostedLLMcutInvDRInvMD     = sboostedLLMcut, InvDR, InvmHHDNN_boost
-VBFlooseDRInvMD              = VBFloose, DR, InvmHHDNN_VBF
-VBFlooseInvDRInvMD           = VBFloose, InvDR, InvmHHDNN_VBF
+s2b0jresolvedMcutmHH250_330 = s2b0jresolvedMcut, DR, (HHKin_mass_raw >= 250 && HHKin_mass_raw < 330)
+s2b0jresolvedMcutmHH330_470 = s2b0jresolvedMcut, DR, (HHKin_mass_raw >= 330 && HHKin_mass_raw < 470)
+s2b0jresolvedMcutmHH470_680 = s2b0jresolvedMcut, DR, (HHKin_mass_raw >= 470 && HHKin_mass_raw < 680)
+s2b0jresolvedMcutmHH680_1100 = s2b0jresolvedMcut, DR, (HHKin_mass_raw >= 680 && HHKin_mass_raw < 1100)
+s2b0jresolvedMcutmHH1100_3500 = s2b0jresolvedMcut, DR, (HHKin_mass_raw >= 1100 && HHKin_mass_raw < 3500)
+s2b0jresolvedMcutInvDR = s2b0jresolvedMcut, InvDR
 
 
+sboostedLLMcutmHH250_400 = sboostedLLMcut, DR, (HHKin_mass_raw >= 250 && HHKin_mass_raw < 400)
+sboostedLLMcutmHH400_570 = sboostedLLMcut, DR, (HHKin_mass_raw >= 400 && HHKin_mass_raw < 570)
+sboostedLLMcutmHH570_810 = sboostedLLMcut, DR, (HHKin_mass_raw >= 570 && HHKin_mass_raw < 810)
+sboostedLLMcutmHH810_1050 = sboostedLLMcut, DR, (HHKin_mass_raw >= 810 && HHKin_mass_raw < 1050)
+sboostedLLMcutmHH1050_3500 = sboostedLLMcut, DR, (HHKin_mass_raw >= 1050 && HHKin_mass_raw < 3500)
+sboostedLLMcutInvDR = sboostedLLMcut, InvDR
 
-#InvDR		  = ditau_deltaR <= 0.5 && ( s1b1jresolvedold || s2b0jresolvedold || sboostedLLMcutold || VBFlooseold )
-#InvDR		  = ditau_deltaR <= 0.5 && ( (baseline , btagM , isBoosted != 1 , ellypsMassCut2, !(isVBF == 1 && VBFjj_mass > 500 && VBFjj_deltaEta > 3 && (bjet1_bID_deepFlavor > 0.2770 || bjet2_bID_deepFlavor > 0.2770) )) || (baseline , btagMM, isBoosted != 1 , ellypsMassCut2, !(isVBF == 1 && VBFjj_mass > 500 && VBFjj_deltaEta > 3 && (bjet1_bID_deepFlavor > 0.2770 || bjet2_bID_deepFlavor > 0.2770) )) || (baseline , btagLL, isBoosted == 1 , boostMassCut2 , !(isVBF == 1 && VBFjj_mass > 500 && VBFjj_deltaEta > 3 && (bjet1_bID_deepFlavor > 0.2770 || bjet2_bID_deepFlavor > 0.2770) )) || (baselineVBFloose, btagMfirst) )
+
+VBFloosemHH250_360 = VBFloose, DR, (HHKin_mass_raw >= 250 && HHKin_mass_raw < 360)
+VBFloosemHH360_530 = VBFloose, DR, (HHKin_mass_raw >= 360 && HHKin_mass_raw < 530)
+VBFloosemHH530_790 = VBFloose, DR, (HHKin_mass_raw >= 530 && HHKin_mass_raw < 790)
+VBFloosemHH790_1050 = VBFloose, DR, (HHKin_mass_raw >= 790 && HHKin_mass_raw < 1050)
+VBFloosemHH1050_3500 = VBFloose, DR, (HHKin_mass_raw >= 1050 && HHKin_mass_raw < 3500)
+VBFlooseInvDR = VBFloose, InvDR
+
 
 
 # VBF "multi-categories"
@@ -121,7 +136,7 @@ TTclass     = VBFloose, mpp_tt_v5
 ## multiple weights are passed as list and are multiplied together
 ## NOTE: no weight is applied for data (the simple Fill() is used)
 [selectionWeights]
-baseline = MC_weight, PUReweight, L1pref_weight, trigSF, IdAndIsoAndFakeSF_deep_pt, DYscale_MTT, prescaleWeight, PUjetID_SF, bTagweightReshape
+baseline      = MC_weight, PUReweight, L1pref_weight, trigSF, IdAndIsoAndFakeSF_deep_pt, DYscale_MTT, prescaleWeight, PUjetID_SF, bTagweightReshape
 
 # remove DY weights, they are already taken into account in baseline weights
 #btagLL   = bTagweightL
@@ -135,9 +150,9 @@ baseline = MC_weight, PUReweight, L1pref_weight, trigSF, IdAndIsoAndFakeSF_deep_
 #########################################################################
 
 [sampleWeights]
-#TTfullyHad = TTtopPtreweight
-#TTfullyLep = TTtopPtreweight
-#TTsemiLep  = TTtopPtreweight
+#TTfullyHad = TTtopPtreweight#, IdAndIsoSF
+#TTfullyLep = TTtopPtreweight#, IdAndIsoSF
+#TTsemiLep  = TTtopPtreweight#, IdAndIsoSF
 #DY = DYLOtoNLOreweight
 
 #########################################################################
@@ -148,7 +163,7 @@ baseline = MC_weight, PUReweight, L1pref_weight, trigSF, IdAndIsoAndFakeSF_deep_
 [systematics]
 #IdAndIsoAndFakeSF_deep_pt = tauid_pt20to25Up:idAndIsoAndFakeSF_tauid_pt20to25_up, tauid_pt20to25Down:idAndIsoAndFakeSF_tauid_pt20to25_down, tauid_pt25to30Up:idAndIsoAndFakeSF_tauid_pt25to30_up, tauid_pt25to30Down:idAndIsoAndFakeSF_tauid_pt25to30_down, tauid_pt30to35Up:idAndIsoAndFakeSF_tauid_pt30to35_up, tauid_pt30to35Down:idAndIsoAndFakeSF_tauid_pt30to35_down, tauid_pt35to40Up:idAndIsoAndFakeSF_tauid_pt35to40_up, tauid_pt35to40Down:idAndIsoAndFakeSF_tauid_pt35to40_down, tauid_pt40toInfUp:idAndIsoAndFakeSF_tauid_pt40toInf_up, tauid_pt40toInfDown:idAndIsoAndFakeSF_tauid_pt40toInf_down, etauFR_barrelUp:idAndIsoAndFakeSF_etauFR_barrel_up, etauFR_barrelDown:idAndIsoAndFakeSF_etauFR_barrel_down, etauFR_endcapUp:idAndIsoAndFakeSF_etauFR_endcap_up, etauFR_endcapDown:idAndIsoAndFakeSF_etauFR_endcap_down
 #PUjetID_SF = PUjetIDSFUp:PUjetID_SF_up, PUjetIDSFDown:PUjetID_SF_down
-#trigSF = trigSFDM0Up:trigSF_DM0_up, trigSFDM0Down:trigSF_DM0_down, trigSFDM1Up:trigSF_DM1_up, trigSFDM1Down:trigSF_DM1_down, trigSFDM10Up:trigSF_DM10_up, trigSFDM10Down:trigSF_DM10_down, trigSFDM11Up:trigSF_DM11_up, trigSFDM11Down:trigSF_DM11_down, trigSFeleUp:trigSF_ele_up, trigSFeleDown:trigSF_ele_down
+#trigSF = trigSFDM0Up:trigSF_DM0_up, trigSFDM0Down:trigSF_DM0_down, trigSFDM1Up:trigSF_DM1_up, trigSFDM1Down:trigSF_DM1_down, trigSFDM10Up:trigSF_DM10_up, trigSFDM10Down:trigSF_DM10_down, trigSFDM11Up:trigSF_DM11_up, trigSFDM11Down:trigSF_DM11_down, trigSFmuUp:trigSF_mu_up, trigSFmuDown:trigSF_mu_down
 #bTagweightReshape = bTagweightReshapeLFUp:bTagweightReshape_lf_up, bTagweightReshapeHFUp:bTagweightReshape_hf_up, bTagweightReshapeHFSTATS1Up:bTagweightReshape_hfstats1_up, bTagweightReshapeHFSTATS2Up:bTagweightReshape_hfstats2_up, bTagweightReshapeLFSTATS1Up:bTagweightReshape_lfstats1_up, bTagweightReshapeLFSTATS2Up:bTagweightReshape_lfstats2_up, bTagweightReshapeCFERR1Up:bTagweightReshape_cferr1_up, bTagweightReshapeCFERR2Up:bTagweightReshape_cferr2_up, bTagweightReshapeLFDown:bTagweightReshape_lf_down, bTagweightReshapeHFDown:bTagweightReshape_hf_down, bTagweightReshapeHFSTATS1Down:bTagweightReshape_hfstats1_down, bTagweightReshapeHFSTATS2Down:bTagweightReshape_hfstats2_down, bTagweightReshapeLFSTATS1Down:bTagweightReshape_lfstats1_down, bTagweightReshapeLFSTATS2Down:bTagweightReshape_lfstats2_down, bTagweightReshapeCFERR1Down:bTagweightReshape_cferr1_down, bTagweightReshapeCFERR2Down:bTagweightReshape_cferr2_down
 #trigSF_new = trigSFDM0Up:trigSF_DM0_up_new, trigSFDM0Down:trigSF_DM0_down_new, trigSFDM1Up:trigSF_DM1_up_new, trigSFDM1Down:trigSF_DM1_down, trigSFDM10Up:trigSF_DM10_up_new, trigSFDM10Down:trigSF_DM10_down_new, trigSFDM11Up:trigSF_DM11_up_new, trigSFDM11Down:trigSF_DM11_down_new, trigSFJetUp:trigSF_vbfjet_up_new, trigSFJetDown:trigSF_vbfjet_down
 #bTagweightM = bTagSFMUp:bTagweightM_up, bTagSFMDown:bTagweightM_down
@@ -208,9 +223,9 @@ ditau_deltaPhi          = 15, 0., 3.14159
 ditau_deltaEta          = 20, 0, 10
 
 HH_mass_raw             = 70, 0, 3500
-HH_mass                 = 70, 0, 3500
+HH_mass                 = 70, 0, 35000
 HH_pt                   = 30, 0, 300
-HHKin_mass_raw          = 3250, 250, 3500
+HHKin_mass_raw          = 70, 0, 3500
 HHKin_mass              = 70, 0, 3500
 HH_deltaPhi             = 15, 0., 3.14159
 HHsvfit_pt              = 30, 0, 300
@@ -231,7 +246,7 @@ VBFjet2_btag_deepFlavor = 20, 0, 1
 
 fatjet_softdropMass     = 50, 0, 300
 
-DNNoutSM_kl_1              = 20,0,1
+DNNoutSM_kl_1              = 10000,0,1
 DNNoutSM_kl_1_tauup_DM0    = 20,0,1 
 DNNoutSM_kl_1_taudown_DM0  = 20,0,1 
 DNNoutSM_kl_1_tauup_DM1    = 20,0,1
@@ -277,31 +292,27 @@ DNNoutSM_kl_1_jetdown11    = 20,0,1
 
 # user defined binning for a variable - has precedence on [histos]
 [binning]
+HHKin_mass_raw = 250, 260, 270, 280, 290, 300, 310, 320, 330, 340, 350, 360, 370, 380, 390, 400, 410, 420, 430, 440, 450, 460, 470, 480, 490, 500, 510, 520, 530, 540, 550, 560, 570, 580, 590, 600, 610, 620, 630, 640, 650, 660, 670, 680, 690, 700, 710, 720, 730, 740, 750, 760, 770, 780, 790, 800, 810, 820, 830, 840, 850, 860, 870, 880, 890, 900, 910, 920, 930, 940, 950, 960, 970, 980, 990, 1000, 1050, 1100, 1150, 1200, 1250, 1300, 1350, 1400, 1450, 1500, 1550, 1600, 1650, 1700, 1750, 1800, 1850, 1900, 1950, 2000, 2050, 2100, 2150, 2200, 2250, 2300, 2350, 2400, 2450, 2500, 2550, 2600, 2650, 2700, 2750, 2800, 2850, 2900, 2950, 3000, 3050, 3100, 3150, 3200, 3250, 3300, 3350, 3400, 3450, 3500
 
 # Dummy binning needed to have make the binning for different categories work properly.
 # These binnings will actually be overwritten by:  category:variable = 0.0, ....
+
 
 #########################################################################
 #########################################################################
 
 [histos2D]
+DNNoutSM_kl_1:HHKin_mass_raw = 1000, 0, 1, 100, 250, 3500
 tauH_SVFIT_mass:bH_mass_raw = 70, 0, 350, 100, 0, 500
 tauH_mass:bH_mass_raw       = 100, 0, 500, 100, 0, 500
 genDecMode1:genDecMode2     = 10, -2,   8, 10, -2, 8
 VBFjj_deltaEta:VBFjj_mass   = 40,  0,  10, 80,  0, 4000
-HHKin_mass_raw:DNNoutSM_kl_1 = 3250, 250, 3500, 100, 0, 1
-DNNoutSM_kl_1:HHKin_mass_raw = 10000, 0, 1, 100, 250, 3500
+
 # user defined binning for a variable - will override the definition in [histos2D]
 # NOTE: if both x and y binnings are defined, there is no need to insert a binning in [histos2D]
 # note: to specify an user binning for a certain axis of a 2D plot, e.g. a binning for B in A:B, use '@' :
 # A:B@B = 0, 15, 20, 30, 50, 1000
 [binning2D]
+DNNoutSM_kl_1:HHKin_mass_raw@HHKin_mass_raw = 250, 260, 270, 280, 290, 300, 310, 320, 330, 340, 350, 360, 370, 380, 390, 400, 410, 420, 430, 440, 450, 460, 470, 480, 490, 500, 510, 520, 530, 540, 550, 560, 570, 580, 590, 600, 610, 620, 630, 640, 650, 660, 670, 680, 690, 700, 710, 720, 730, 740, 750, 760, 770, 780, 790, 800, 810, 820, 830, 840, 850, 860, 870, 880, 890, 900, 910, 920, 930, 940, 950, 960, 970, 980, 990, 1000, 1050, 1100, 1150, 1200, 1250, 1300, 1350, 1400, 1450, 1500, 1550, 1600, 1650, 1700, 1750, 1800, 1850, 1900, 1950, 2000, 2050, 2100, 2150, 2200, 2250, 2300, 2350, 2400, 2450, 2500, 2550, 2600, 2650, 2700, 2750, 2800, 2850, 2900, 2950, 3000, 3050, 3100, 3150, 3200, 3250, 3300, 3350, 3400, 3450, 3500
 # tauH_SVFIT_mass:bH_mass_raw@bH_mass_raw     = 10, 35, 60, 85, 110, 135, 160, 185, 210, 250, 300, 350, 400, 500
 # tauH_SVFIT_mass:bH_mass_raw@tauH_SVfit_mass = 10, 35, 60, 85, 110, 135, 160, 185, 210, 250, 300, 350, 400, 500
-[selections]
-
-# pT and eta cuts are already applied at trig match level, so they are not needed here
-# dau1_pt > 25 && abs(dau1_eta) < 2.1 && dau2_pt > 20 && abs(dau2_eta) < 2.3
-baseline         = pairType == 1 && nleps == 0 && nbjetscand > 1
-baselineVBF      = baseline, isVBF == 1
-baselineNoVBF    = baseline, isVBF == 0
